# RT_V1_demo

./: CMakeLists.txt  README.md  defolt_setting.c  deleted_cod.c  file.c  foo.c  init.c  main.c  pars_set.c  render.c  rt_v1.h  scena_0  scena_1  set_cam.c  set_light.c  set_object_var.c  set_scene.c  sphere.c  struct.h
vmthlib/include/: struct.h  vmth.h
